<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.perspective.nishant.Perspective.FeedbackActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/feedback_toolbar"
        android:layout_width="428dp"
        android:layout_height="57dp"
        app:layout_constraintTop_toTopOf="parent"
        android:title="@string/app_name"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
        android:background="@color/colorPrimary"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.2"></android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subject"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="28dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedback_bold" />

    <EditText
        android:id="@+id/feedback_subject"
        android:layout_width="329dp"
        android:layout_height="41dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/type_subject"
        android:layout_marginTop="13dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="27dp"
        app:layout_constraintTop_toBottomOf="@+id/feedback_subject" />

    <EditText
        android:id="@+id/feedback_body"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/feedback"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:hint="@string/feedback_text"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintVertical_bias="0.036"
        app:layout_constraintHorizontal_bias="0.25"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <Button
        android:id="@+id/send_feedback"
        android:onClick="onClickSendFeedback"
        android:layout_width="122dp"
        android:layout_height="48dp"
        android:text="@string/send"
        android:background="@color/colorPrimary"
        android:textColor="@color/color_snowWhite"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="54dp"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintHorizontal_bias="0.492" />

    <TextView
        android:id="@+id/feedback_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feedback"
        android:textSize="50sp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="109dp" />
</android.support.constraint.ConstraintLayout>
