<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:weightSum="1">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="650dp"
                android:layout_weight="1.55">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@string/ongoing_poll"
                        android:textAlignment="center"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/poll_ques"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <ViewSwitcher
                        android:id="@+id/view_switcher"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:weightSum="2">

                            <Button
                                android:id="@+id/yesButton"
                                style="@style/Base.Widget.AppCompat.Button.Borderless"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@color/green"
                                android:text="@string/yes" />

                            <Button
                                android:id="@+id/noButton"
                                style="@style/Base.Widget.AppCompat.Button.Borderless"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:background="@color/red"
                                android:text="@string/no" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/textView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:textAlignment="center"
                            android:gravity="center_vertical"
                            android:textColor="@color/color_snowWhite"
                            android:layout_gravity="center"
                            android:text="@string/you_have_voted_for_this_poll"
                            android:background="@color/colorAccent"/>
                    </ViewSwitcher>

                    <com.github.mikephil.charting.charts.PieChart
                        android:id="@+id/pieChart_Opinion"
                        android:layout_width="314dp"
                        android:layout_height="307dp"

                        android:layout_gravity="center"
                        android:contentDescription="@string/poll_result"
                        android:scaleX="0.75"
                        android:scaleY="0.75" />

                    <Button
                        android:id="@+id/related_story"
                        android:padding="2dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/light_blue"
                        android:onClick="onClickStartRelatedNews"
                        android:text="@string/related_story" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>