<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.perspective.nishant.Perspective.LoginActivity">

    <EditText
        android:id="@+id/email"
        android:layout_width="294dp"
        android:layout_height="47dp"
        android:layout_marginBottom="34dp"
        android:layout_marginEnd="39dp"
        android:layout_marginStart="39dp"
        android:ems="10"
        android:hint="@string/your_email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <EditText
        android:id="@+id/password"
        android:layout_width="294dp"
        android:layout_height="47dp"
        android:layout_marginEnd="44dp"
        android:layout_marginStart="44dp"
        android:ems="10"
        android:hint="@string/your_password"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginBottom="42dp"
        app:layout_constraintBottom_toTopOf="@+id/submit" />

    <Button
        android:id="@+id/submit"
        android:layout_width="137dp"
        android:layout_height="53dp"
        android:text="@string/submit"
        android:background="#ffca3a"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="195dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.502" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="139dp"
        android:layout_height="28dp"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:text="@string/signin"
        android:textColor="@color/color_snowWhite"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintVertical_bias="0.938" />

    <TextView
        android:gravity="center"
        android:textColor="@color/color_snowWhite"
        android:textStyle="bold"
        android:textSize="22sp"
        android:id="@+id/textView8"
        android:layout_width="139dp"
        android:layout_height="28dp"
        android:text="@string/or_via"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@+id/submit"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.502" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/SignInGoogle"
        android:textAlignment="center"
        android:layout_width="132dp"
        android:layout_height="53dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.395"
        tools:layout_editor_absoluteX="139dp"></com.google.android.gms.common.SignInButton>


</android.support.constraint.ConstraintLayout>
