<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.perspective.nishant.Perspective.AboutUsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/aboutus_toolbar"
        android:layout_width="428dp"
        android:layout_height="57dp"
        app:layout_constraintTop_toTopOf="parent"
        android:title="@string/app_name"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/AppTheme.PopupOverlay"
        app:navigationIcon="@drawable/ic_arrow_back_white_24dp"
        android:background="@color/colorPrimary"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.2"></android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/Aboutus_activity"
        android:textSize="50sp"
        app:layout_constraintHorizontal_bias="0.049"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintTop_creator="1"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="108dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="343dp"
        android:layout_height="245dp"
        android:text="@string/our_story"
        android:textSize="18sp"
        android:padding="5sp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="35dp"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.242"
        android:layout_marginLeft="8dp" />

</android.support.constraint.ConstraintLayout>
